--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "npm run build && git add docs && git commit -m 'deploy' || echo 'skip commit' && git push"
   },
   "dependencies": {
     "@google/genai": "^0.12.0"
