Chatbot öffnet sich automatisch beim Laden der Seite

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,11 @@
 
     "paths": {
       "@/*" :  ["./*"]
-    }
+    },
+    "types": [
+      "vite/client",
+      "react",
+      "react-dom"
+    ]
   }
 }
