--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "hostile-vehicle-mitigation-dashboard",
   "private": true,
@@ -11,7 +10,12 @@
     "deploy": "npm run build && git add docs && git commit -m 'deploy' || echo 'skip commit' && git push"
   },
   "dependencies": {
-    "@google/genai": "^0.12.0"
+    "@google/genai": "^0.12.0",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
+    "framer-motion": "^12.23.12",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
