--- a/package.json
+++ b/package.json
@@ -8,20 +8,34 @@
     "build": "vite build --minify terser",
     "postbuild": "xcopy /E /I /Y public\\images docs\\images && xcopy /Y public\\*.json docs\\",
     "preview": "vite preview",
-    "deploy": "npm run build && git add docs && git commit -m 'deploy' || echo 'skip commit' && git push"
+    "deploy": "npm run build && git add docs && git commit -m 'deploy' || echo 'skip commit' && git push",
+    "test": "vitest",
+    "test:run": "vitest run"
   },
   "dependencies": {
     "@google/genai": "^0.12.0",
+    "@turf/bbox": "^7.0.0",
+    "@turf/bbox-polygon": "^7.0.0",
+    "@turf/boolean-point-in-polygon": "^7.0.0",
+    "@turf/buffer": "^7.0.0",
+    "@turf/helpers": "^7.0.0",
+    "@turf/length": "^7.0.0",
+    "@turf/line-chunk": "^7.0.0",
+    "@turf/line-intersect": "^7.0.0",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "framer-motion": "^12.23.12",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/geojson": "^7946.0.8",
     "@types/node": "^22.14.0",
+    "jsdom": "^27.0.0",
     "terser": "^5.43.1",
     "typescript": "~5.7.2",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vitest": "^2.0.0"
   }
 }
