--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@deck.gl/layers": "^9.2.2",
     "@deck.gl/react": "^9.2.2",
     "@google/genai": "^0.12.0",
+    "@google/generative-ai": "^0.24.1",
     "@loaders.gl/core": "^4.3.4",
     "@loaders.gl/i3s": "^4.3.4",
     "@turf/bbox": "^7.0.0",
@@ -30,7 +31,6 @@
     "@turf/line-intersect": "^7.0.0",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
-    "cesium": "^1.134.1",
     "framer-motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -43,6 +43,6 @@
     "terser": "^5.43.1",
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
-    "vitest": "^2.0.0"
+    "vitest": "^4.0.4"
   }
 }
