--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "framer-motion": "^12.23.12",
+    "jspdf": "^3.0.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/geojson": "^7946.0.8",
