--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "@turf/line-intersect": "^7.0.0",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
+    "cors": "^2.8.5",
+    "express": "^5.2.0",
     "framer-motion": "^12.23.12",
+    "http-proxy-middleware": "^3.0.5",
     "jspdf": "^3.0.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
